fixed nav overlaps

--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
-    overflow-x: hidden;
 }
 body{
     background: #08114B;
